--- a/src/main/webapp/iframe_membersCard.html
+++ b/src/main/webapp/iframe_membersCard.html
@@ -51,7 +51,7 @@
                 type: 'POST',
                 dataType: 'json',
                 success: function (data) {
-                    console.log(data)
+                    // console.log(data)
                     setSelectData(data.data);
                     if (!state) {//添加
                         $('#isUpdate').css('display', 'inline-block');
