--- a/src/main/webapp/iframe_modifyPriceHFRZ.html
+++ b/src/main/webapp/iframe_modifyPriceHFRZ.html
@@ -256,7 +256,7 @@
 						_o['y'+this.dataset['date']] = this.dataset['price'];
 					})
                 }catch (e){
-                    console.log(e)
+                    // console.log(e)
                 }
                 _arr.push(_o);
             })
