--- a/src/main/webapp/iframe_orderSettleAccounts.html
+++ b/src/main/webapp/iframe_orderSettleAccounts.html
@@ -225,7 +225,7 @@
             }
             delete requestData.integralReduction;
 
-            console.log(requestData);
+            // console.log(requestData);
 
             //消费项目结账
             if (!s) {//子项结账
