--- a/src/main/webapp/iframe_pick_room2.html
+++ b/src/main/webapp/iframe_pick_room2.html
@@ -195,7 +195,7 @@
                     $houseList.append(str);
                 } catch (err) {
                     // alert(err);
-                    console.log(err)
+                    // console.log(err)
 
                 }
             }
