--- a/src/main/webapp/iframe_updatePass.html
+++ b/src/main/webapp/iframe_updatePass.html
@@ -58,7 +58,7 @@
                         newPassword: data.field.newPass
                     },
                     success: function (data) {
-                        console.log(data);
+                        // console.log(data);
                         if(data.success){
                             showMsg('修改成功', 1, true);
                             parent.location.href = 'login.html'
