--- a/src/main/webapp/pre-check-out-report.html
+++ b/src/main/webapp/pre-check-out-report.html
@@ -105,7 +105,7 @@
             //     data[i].endTime = layui.util.toDateString(data[i].endTime.time, 'yyyy-MM-dd HH:mm');
             //     data[i].startTime = layui.util.toDateString(data[i].startTime.time, 'yyyy-MM-dd HH:mm');
             // }
-            console.log(data);
+            // console.log(data);
             tab.reload({data: JSON.parse(JSON.stringify(data))});
         }
 
