--- a/src/main/webapp/iframe_member_import.html
+++ b/src/main/webapp/iframe_member_import.html
@@ -65,7 +65,7 @@
             ,accept: 'file' //允许上传的文件类型
             ,done: function(res){
                 //上传完毕回调
-                console.info(res);
+                // console.info(res);
 
                 if(res.success){
                     parent.layer.alert(res.data);
@@ -77,7 +77,7 @@
             }
             ,error: function(e){
                 //请求异常回调
-                console.info(e);
+                // console.info(e);
                 layer.msg(e, {icon: 2,shift:6});
                 $("#result").val(e)
             }
