--- a/src/main/webapp/iframe_modifyPriceYY.html
+++ b/src/main/webapp/iframe_modifyPriceYY.html
@@ -261,7 +261,7 @@
                             _o['y' + this.dataset['date']] = this.dataset['price'];
                         })
                     } catch (e) {
-                        console.log(e)
+                        // console.log(e)
                     }
                     _arr.push(_o);
                 })
