--- a/src/main/webapp/iframe_pick_room1.html
+++ b/src/main/webapp/iframe_pick_room1.html
@@ -365,7 +365,7 @@
         return flag;
     }
     function getRoomIds() {
-        console.log(seleted)
+        // console.log(seleted)
         var ids = [];
         for(var i=0;i<seleted.length;i++){
             ids.push(seleted[i]['roomId'])
@@ -373,7 +373,7 @@
         return ids.join(",")
     }
     function getRoomTypes() {
-        console.log(seleted)
+        // console.log(seleted)
         var ids = [];
         for(var i=0;i<seleted.length;i++){
             ids.push(seleted[i]['roomType'])
