--- a/src/main/webapp/iframe_tallyInfo.html
+++ b/src/main/webapp/iframe_tallyInfo.html
@@ -45,7 +45,7 @@
                     money: tally.money
                 },
                 success: function (rs) {
-                    console.log(rs);
+                    // console.log(rs);
                     showMsg('挂账成功', 1, false);
                     var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
                     parent.layer.close(index); //再执行关闭
