--- a/src/main/webapp/iframe_updateHotel.html
+++ b/src/main/webapp/iframe_updateHotel.html
@@ -38,7 +38,7 @@
                 type: 'POST',
                 dataType: 'json',
                 success: function (data) {
-                    console.log(data);
+                    // console.log(data);
                     // defaultId = data.data[0].id;
                     // scheduleData();
                     setSelectData(data.data);
