--- a/src/main/webapp/member_info.html
+++ b/src/main/webapp/member_info.html
@@ -29,7 +29,7 @@
 <script src="js/loadjs.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use(['table'], function () {
-        var $ = layui.$, table = layui.table, id = 0;
+        var $ = layui.$, table = layui.table, id = 0, tab = {};
 
         $(document).ready(function () {
             id = getUrl('id');//获取id
@@ -39,6 +39,66 @@
             }
         });
 
+
+        //消费明细
+        tab = table.render({
+            elem: '#memberInfo'
+            , url: api.consumeRecord + '?date=' + Date.now()
+            , where: {memberId: id}
+            , method: 'POST'
+            , toolbar: '#toolbarDemo'
+            , even: true
+            , text: {
+                none: '暂无相关数据' //默认：无数据。注：该属性为 layui 2.2.5 开始新增
+            }
+            , page: {
+                curr: 1 //重新从第 1 页开始
+            }
+            , request: {
+                pageName: 'pageNo'
+                , limitName: 'pageSize'
+            }
+            , response: {
+                statusName: 'code' //规定数据状态的字段名称，默认：code
+                , statusCode: 200 //规定成功的状态码，默认：0
+                , msgName: 'msg' //规定状态信息的字段名称，默认：msg
+                , countName: 'count' //规定数据总数的字段名称，默认：count
+                , dataName: 'data' //规定数据列表的字段名称，默认：data
+            }
+            , parseData: function (res) { //res 即为原始返回的数据
+                return {
+                    "code": 200, //解析接口状态
+                    "msg": res.errMsg, //解析提示文本
+                    "count": res.data.count, //解析数据长度
+                    "data": res.data.consumptionRecordBOS //解析数据列表
+                };
+            }
+            , cols: [[
+                {field: 'roomName', title: '房间号', minWidth: 80, align: 'center'},
+                {
+                    field: 'payType', title: '支付方式', minWidth: 80, align: 'center', templet: function (data) {
+                        return orderPayType(data.payType);
+                    }
+                },
+                {field: 'orderNumber', title: '单号', minWidth: 80, align: 'center'},
+                {field: 'OTA', title: 'OTA', minWidth: 80, align: 'center'},
+                {field: 'money', title: '交易金额', minWidth: 120, align: 'center'},
+                {field: 'project', title: '交易项目', minWidth: 80, align: 'center'},
+                {
+                    field: 'createTime',
+                    title: '发生时间',
+                    minWidth: 80,
+                    align: 'center',
+                    templet: function (data) {
+                        return data.createTime != null ? DateToLStr(new Date(data.createTime.time)) : '空'
+                    }
+                },
+                {field: 'remark', title: '备注', minWidth: 80, align: 'center'},
+                {field: 'name', title: '收银员', minWidth: 80, align: 'center'}
+            ]]
+        });
+
+
         //头工具栏事件
         table.on('toolbar(memberInfo)', function (obj) {
             var checkStatus = table.checkStatus(obj.config.id), data = checkStatus.data;
@@ -46,7 +106,7 @@
                 case 'consumptionDetail':
                     //消费明细
                     tab.reload({
-                        url: api.consumeRecord
+                        url: api.consumeRecord+ '?date=' + Date.now()
                         , where: {memberId: id}
                         , method: 'POST'
                         , page: {
@@ -103,7 +163,7 @@
                 case 'integralDetail':
                     //积分明细
                     tab.reload({
-                        url: api.integralRecord
+                        url: api.integralRecord+ '?date=' + Date.now()
                         , where: {memberId: id}
                         , method: 'POST'
                         , page: {
@@ -130,7 +190,8 @@
                         }
                         , cols: [[
                             {field: 'id', hide: true, title: '编号', align: 'center'},
-                            {field: 'type', title: '类型', align: 'center',
+                            {
+                                field: 'type', title: '类型', align: 'center',
                                 templet: function (data) {
                                     return data.type
                                 }
@@ -152,7 +213,7 @@
                 case 'storageDetails':
                     //储值明细
                     tab.reload({
-                        url: api.storedRecord
+                        url: api.storedRecord+ '?date=' + Date.now()
                         , where: {memberId: id}
                         , method: 'POST'
                         , page: {
@@ -179,7 +240,8 @@
                         }
                         , cols: [[
                             {field: 'id', hide: true, title: '编号', align: 'center'},
-                            {field: 'type', title: '类型', align: 'center',
+                            {
+                                field: 'type', title: '类型', align: 'center',
                                 templet: function (data) {
                                     return data.type
                                 }
@@ -204,67 +266,12 @@
             }
         });
 
-        //消费明细
-        var tab = table.render({
-            elem: '#memberInfo'
-            , url: api.consumeRecord
-            , where: {memberId: id}
-            , method: 'POST'
-            , toolbar: '#toolbarDemo'
-            , even: true
-            , page: {
-                curr: 1 //重新从第 1 页开始
-            }
-            , request: {
-                pageName: 'pageNo'
-                , limitName: 'pageSize'
-            }
-            , response: {
-                statusName: 'code' //规定数据状态的字段名称，默认：code
-                , statusCode: 200 //规定成功的状态码，默认：0
-                , msgName: 'msg' //规定状态信息的字段名称，默认：msg
-                , countName: 'count' //规定数据总数的字段名称，默认：count
-                , dataName: 'data' //规定数据列表的字段名称，默认：data
-            }
-            , parseData: function (res) { //res 即为原始返回的数据
-                return {
-                    "code": 200, //解析接口状态
-                    "msg": res.errMsg, //解析提示文本
-                    "count": res.data.count, //解析数据长度
-                    "data": res.data.consumptionRecordBOS //解析数据列表
-                };
-            }
-            , cols: [[
-                {field: 'roomName', title: '房间号', minWidth: 80, align: 'center'},
-                {
-                    field: 'payType', title: '支付方式', minWidth: 80, align: 'center', templet: function (data) {
-                        return orderPayType(data.payType);
-                    }
-                },
-                {field: 'orderNumber', title: '单号', minWidth: 80, align: 'center'},
-                {field: 'OTA', title: 'OTA', minWidth: 80, align: 'center'},
-                {field: 'money', title: '交易金额', minWidth: 120, align: 'center'},
-                {field: 'project', title: '交易项目', minWidth: 80, align: 'center'},
-                {
-                    field: 'createTime',
-                    title: '发生时间',
-                    minWidth: 80,
-                    align: 'center',
-                    templet: function (data) {
-                        return data.createTime != null ? DateToLStr(new Date(data.createTime.time)) : '空'
-                    }
-                },
-                {field: 'remark', title: '备注', minWidth: 80, align: 'center'},
-                {field: 'name', title: '收银员', minWidth: 80, align: 'center'}
-            ]]
-        });
-
 
         $('#updateData').on('click', function () {
             parent.layer.open({
                 type: 2,
                 title: "编辑",
-                content: './iframe_member_add.html?id=' + id+ '&date=' + Date.now(),
+                content: './iframe_member_add.html?id=' + id + '&date=' + Date.now(),
                 area: ['820px', '520px']
             });
         });
@@ -311,34 +318,6 @@
                 area: ['800px', '85%']
             });
         });
-
-        window.onbeforeunload = function (event) {
-            var isIE = document.all;
-            evt = evt ? evt : (window.event ? window.event : null);
-            if (isIE) {//IE浏览器
-                var n = evt.screenX - window.screenLeft;
-                var b = n > document.documentElement.scrollWidth - 20;
-                if (b && evt.clientY < 0 || evt.altKey) {
-                    //alert("是关闭而非刷新");
-                    console.log('是关闭而非刷新')
-                }
-                else {
-                    //alert("是刷新而非关闭");
-                    return false;
-                }
-            }
-            else {//火狐浏览器
-                if (document.documentElement.scrollWidth != 0) {
-                    //alert("是刷新而非关闭");
-                    console.log('是刷新而非关闭');
-                    return false;
-
-                }
-                else {
-                    console.log('是关闭而非刷新')
-                }
-            }
-        }
     });
 
 
