--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -375,7 +375,7 @@
                     },
                     error: function (err) {
                         console.log('error');
-                        console.log(err);
+                        // console.log(err);
                     }
                 });
 
