--- a/src/main/webapp/permission.html
+++ b/src/main/webapp/permission.html
@@ -85,7 +85,7 @@
                 type: 'POST',
                 dataType: 'json',
                 success: function (data) {
-                    console.log(data);
+                    // console.log(data);
                     setSelectData(data.data);
                 }
             })
