--- a/src/main/webapp/schedule.html
+++ b/src/main/webapp/schedule.html
@@ -370,8 +370,8 @@
             roomAuxiliaryStatus:$("input[name='checkType']:checked").val()
 		}
 		localStorage.yyxf = JSON.stringify(selectRoomData);
-        console.log('下面是预约选房查询条件的数据')
-        console.log(selectRoomData	)
+        // console.log('下面是预约选房查询条件的数据')
+        // console.log(selectRoomData	)
         //询问框
         layer.confirm('选房型还是选房间？', {
             btn: ['房型','房间'] //按钮
