--- a/src/main/webapp/member.html
+++ b/src/main/webapp/member.html
@@ -35,7 +35,7 @@
         <button class="layui-btn" id="add">新增</button>
         <button class="layui-btn" id="importMembers">导入会员</button>
         <a href="/member/exportMember" target="_blank" class="layui-btn" id="exportMembership">导出会员</a>
-        <button class="layui-btn" id="cardReading">读卡</button>
+        <!--<button class="layui-btn" id="cardReading">读卡</button>-->
         <button class="layui-btn" id="importMembers1">卡号导入</button>
     </div>
     <div class="query-box">
@@ -172,9 +172,6 @@
 
         });
 
-        $('#cardReading').on('click', function () {
-
-        });
         $('#queryBtn').on('click', function () {
             search();
         });
